fixed country groups

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -66,16 +66,14 @@ body {
 /*= HEADER */
 
 .header {
-
-  border: 0;
-  left: 10px;
-  padding: $gu-v-spacing/2 $gu-h-spacing/2 $gu-v-spacing $gu-h-spacing/2;
-  width: 100%;
-  margin: 0 -10px;
-  font: bold 22px/1.15 $gu-headline;
-  color: gu-colour(garnett-neutral-1);
+  display: none;
 
   @include mq($from: tablet) {
+    left: 10px;
+    width: 100%;
+    font: bold 22px/1.15 $gu-headline;
+    color: gu-colour(garnett-neutral-1);
+    margin: 0 -10px;
     border-bottom: 1px solid gu-colour(garnett-neutral-4);
     font-size: 36px;
     padding: 0 $gu-h-spacing/2 $gu-v-spacing*1.5 $gu-h-spacing/2;
@@ -92,15 +90,17 @@ header[role="banner"] {
   background-color: gu-colour(header-dark);
   border-bottom: 1px solid gu-colour(garnett-neutral-4);
   position: relative;
-  height: 75px;
+  height: 44px;
   display: flex;
   align-items: flex-start;
   flex-direction: row-reverse;
   justify-content: space-between;
   z-index: 1;
+  padding: 0 10px;
 
 
   @include mq($from: tablet) {
+    height: 75px;
     padding: 0;
     width: auto;
   }
@@ -118,11 +118,11 @@ header[role="banner"] {
 }
 
 .glogo {
-  width: 60px;
-  height: 60px;
+  width: 30px;
+  height: 30px;
+  right: 0;
   position: relative;
   top: 7px;
-  right: 10px;
 
   .svg-roundel {
     width: 100%;
@@ -140,15 +140,16 @@ header[role="banner"] {
 
 .countryGroups {
   font-family: $gu-text-sans-web;
-  margin-top: $gu-v-spacing * 2.5;
   max-width: 355px;
-  margin-left: 10px;
   text-overflow: ellipsis;
   width: 185px;
   white-space: nowrap;
+  margin-left: 0;
+  // TODO: this is basically just vertical centering. use flex-box!
+  margin-top: 4px;
 
   summary {
-    padding-left: 10px;
+    padding-left: 0;
   }
 
   .svg-globe {
@@ -158,7 +159,13 @@ header[role="banner"] {
   @include mq($from: tablet) {
     padding: 0;
     width: 100%;
+    margin-top: $gu-v-spacing * 2.5;
+    margin-left: 10px;
     cursor: pointer;
+
+    summary {
+      padding-left: 10px;
+    }
   }
 }
 
@@ -335,8 +342,14 @@ button {
 }
 
 .blurb {
-  font: 100 17px/1.25 $gu-text-egyptian-web;
-  margin: ($gu-v-spacing / 4) 0 ($gu-v-spacing / 4 * 3);
+  display: none;
+
+
+  @include mq($from: tablet) {
+    display: block;
+    font: 100 17px/1.25 $gu-text-egyptian-web;
+    margin: ($gu-v-spacing / 4) 0 ($gu-v-spacing / 4 * 3);
+  }
 }
 
 footer[role="contentinfo"] {
@@ -420,8 +433,11 @@ form {
 
 .form__radio-group-list {
   list-style: none;
-  margin: 0;
-  padding: $gu-v-spacing 0 0 0;
+  padding: 0;
+
+  @include mq($from: tablet) {
+    padding: $gu-v-spacing 0 0 0;
+  }
 }
 
 .form__radio-group-input {
@@ -719,56 +735,4 @@ form {
 .component-password-failure-message {
   padding: 0 $gu-h-spacing $gu-v-spacing;
   margin-top: $gu-v-spacing;
-}
-
-.gu-content--contribution-form.gu-content {
-  @include mq($from: mobile, $until: tablet) {
-
-    .header {
-      display: none;
-    }
-
-    .form__radio-group-list {
-      padding-top: 0;
-    }
-
-    .blurb {
-      display: none;
-    }
-
-    .form__radio-group-list {
-      padding-top: 0;
-    }
-
-    $header-height: 44px;
-
-    .glogo {
-      width: 30px;
-      height: 30px;
-      right: 0;
-    }
-
-    .countryGroups {
-      margin-left: 0;
-
-      // TODO: this is basically just vertical centering. use flex-box!
-      margin-top: 4px;
-
-      summary {
-        padding-left: 0;
-      }
-    }
-
-    .blurb {
-      font-size: 16px;
-      margin: 0;
-    }
-
-    header[role="banner"] {
-      height: $header-height;
-
-      // to match .gu-content__content
-      padding: 0 10px;
-    }
-  }
 }
