--- a/assets/components/button/button.scss
+++ b/assets/components/button/button.scss
@@ -82,3 +82,15 @@
 .component-button--hasicon-left svg {
   margin: $gu-v-spacing * -1 $gu-h-spacing * .5 $gu-v-spacing * -1 $gu-h-spacing * -.5;
 }
+
+
+/* icon-specific animations & transitions */
+.component-button {
+  .svg-arrow-right-straight {
+    transition: .2s transform;
+    will-change: transform;
+  }
+  &:hover .svg-arrow-right-straight, &:focus .svg-arrow-right-straight {
+    transform: translateX(5%);
+  }
+}
