--- a/assets/components/forms/customFields/radioInput.scss
+++ b/assets/components/forms/customFields/radioInput.scss
@@ -1,13 +1,12 @@
 .component-radio-input {
-  display: block;
   @include gu-fontset-body-sans;
+  display: block;
   cursor: pointer;
   margin-top: $gu-v-spacing;
   position: relative;
-
   &:hover {
     .component-radio-input__text::before {
-      border-color: gu-colour(garnett-neutral-2);
+      box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px lighten(gu-colour(garnett-neutral-4), 6%);
     }
   }
 }
@@ -23,6 +22,9 @@
   width: 0;
   top: 0;
   left: 0;
+  &:focus + .component-radio-input__text::before {
+    box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px lighten(gu-colour(news-garnett-highlight), 6%);
+  }
 }
 
 .component-radio-input__text::before {
@@ -35,6 +37,7 @@
   box-shadow: inset 0 0 0 3px #fff;
   border-radius: 60px;
   margin-right: 5px;
+  transition: .2s box-shadow;
 }
 
 .component-radio-input__input:checked + .component-radio-input__text::before {
