--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -141,7 +141,7 @@ $gu-colours: (
   immersive-garnett-main-1: rgba(0, 0, 0, .65),
   analysis-garnett-underline: #ffbac8,
 
-  green-dark: #236925,
+  green-dark: #185E36,
 
   patrons: #a1845c,
   masterclass: #bb3b80
