--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -102,7 +102,7 @@ $gu-colours: (
   news-garnett-media-main-1: #ff4e36, // used for kicker on media
   news-garnett-highlight: #ffe500,
   news-faded:  #fff4f2,
-  highlight-dark: #ebd10a,
+  highlight-dark: #ffbb50,
 
   opinion-garnett-main-1: #ed6300,
   opinion-garnett-feature: #f5be2c,
