add tracking to app store, return to guardian, and footer links on the digipack checkout thank you page.

--- a/assets/pages/digital-subscription-checkout/components/returnSection.scss
+++ b/assets/pages/digital-subscription-checkout/components/returnSection.scss
@@ -1,4 +1,6 @@
-.component-return-section {
+@import '~stylesheets/gu-sass/gu-sass';
+
+.return-section {
 
   .component-left-margin-section__content {
     box-sizing: border-box;
