--- a/assets/components/productPage/productPagePlanForm/productPagePlanFormLabel.scss
+++ b/assets/components/productPage/productPagePlanForm/productPagePlanFormLabel.scss
@@ -35,6 +35,7 @@
   padding: $gu-v-spacing/2.15 $gu-h-spacing/2;
   background-color: gu-colour(garnett-neutral-4);
   position: relative;
+  transition: .2s background;
 }
 
 .component-product-page-plan-form-label__content {
@@ -66,6 +67,10 @@
 .component-product-page-plan-form-label__input:hover + .component-product-page-plan-form-label__box,
 .component-product-page-plan-form-label__input:focus + .component-product-page-plan-form-label__box {
   box-shadow: 0 0 0 2px rgba(gu-colour(garnett-neutral-5),.25);
+}
+.component-product-page-plan-form-label__input:hover + .component-product-page-plan-form-label__box .component-product-page-plan-form-label__title,
+.component-product-page-plan-form-label__input:focus + .component-product-page-plan-form-label__box .component-product-page-plan-form-label__title {
+  background: gu-colour(news-garnett-highlight);
 }
 
 .component-product-page-plan-form-label__input:checked + .component-product-page-plan-form-label__box {
