--- a/assets/components/productPage/productPageTabs/productPageTabs.scss
+++ b/assets/components/productPage/productPageTabs/productPageTabs.scss
@@ -13,24 +13,47 @@
 }
 
 .component-product-page-tabs__li {
+  overflow: hidden;
   @include mq($until:phablet) {
     flex: 1 1 0;
   }
 }
 
+.component-product-page-tabs__li:last-child {
+  box-shadow: 1px 0 0 0 gu-colour(garnett-neutral-4);
+}
+
+.component-product-page-tabs__li + .component-product-page-tabs__li .component-product-page-tabs__tab {
+  &:before {
+    position: absolute;
+    bottom: 1.0625rem;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    background: gu-colour(garnett-neutral-4);
+    content: '';
+  }
+}
+
 .component-product-page-tabs__tab {
-  @include gu-fontset-heading-sans;
+  position: relative;
   text-decoration: none;
-  padding: ($gu-v-spacing)/1.25 $gu-h-spacing/2 ($gu-v-spacing)/1.5;
+  padding: ($gu-v-spacing)*1.3 $gu-h-spacing/2;
+  margin: 0 -1px 0 0;
   display: block;
   width: 100%;
   border: 0;
   margin-right: -1px;
-  box-shadow: inset 0 0 0 1px gu-colour(garnett-neutral-4); 
+  box-shadow: inset 0 1px 0 0 gu-colour(garnett-neutral-4);
   color: gu-colour(garnett-neutral-1);
   text-align: left;
   appearance: none;
   box-sizing: border-box;
+  transition: box-shadow 0.2s;
+  font-family: $gu-headline;
+  font-weight: 700;
+  line-height: 1;
+
   cursor: pointer;
   @include mq($from:phablet) {
     min-width: gu-span(3) + $gu-h-spacing/2;
@@ -42,7 +65,7 @@
 }
 
 .component-product-page-tabs__tab--active {
-  box-shadow: inset 0 4px 0 0 gu-colour(news-garnett-highlight), inset 1px 0 0 0 gu-colour(garnett-neutral-4), inset -1px 0 0 0 gu-colour(garnett-neutral-4), inset 0 -1px 0 0 gu-colour(garnett-neutral-5) ;
+  box-shadow: inset 0 4px 0 0 gu-colour(news-garnett-highlight);
   text-decoration: none;
   pointer-events: none;
   cursor: default;
@@ -50,5 +73,5 @@
 
 .component-product-page-tabs__tab:focus,
 .component-product-page-tabs__tab:hover {
-  box-shadow: inset 0 4px 0 0 gu-colour(garnett-neutral-4), inset 0 0 0 1px gu-colour(garnett-neutral-4);
+  box-shadow: inset 0 4px 0 0 gu-colour(garnett-neutral-4);
 }
