--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -70,6 +70,7 @@
   }
 
   .thank-you-stage__ctas {
+    margin-top: $gu-v-spacing / 2;
     > .component-button {
       min-width: 100%;
       @include mq($from: desktop) {
