--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -17,37 +17,14 @@
   & .component-product-page-content-block-divider__line {
     @include multiline(4, $border);
   }
-  /*
-  All our ContentBlocks have the behaviour of rendering 
-  with a border between them if there's two with the same 
-  background colour in a row.
-
-  These selectors attempt to enforce this by applying the 
-  border to .selector + .selector (adjacent sibling) 
-  
-  The second selector applies the rule to the first child 
-  of an element wrapped in an extra div if it matches the 
-  classname (because React makes you do that sometimes)
-
-  I hope this explains it:
-
-  +----------------+
-  | blue block     |
-  +----------------+
-  +----------------+
-  | wrapping div   |
-  |+--------------+|
-  || another blue ||
-  || block        ||
-  |+--------------+|
-  +----------------+
-
-  */
-  & + &,
-  & + div > &:first-child  {
+  &.component-product-page-content-block--force-border,
+  & + &  {
     .component-left-margin-section__content {
       border-top: 1px solid $border;
     }
+  }
+  &.component-product-page-content-block--no-border  .component-left-margin-section__content {
+    border-top: 0 !important;  
   }    
 }
 
@@ -150,7 +127,8 @@
   cancel out initial padding
   */
   .component-product-page-content-block__content > .component-product-page-content-block-divider:first-child,
-  .component-checkout {
+  .component-checkout,
+  .component-product-page-tabs {
     margin-top: ($gu-v-spacing*-.5) - 1px;
   }
 }
