--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -26,7 +26,11 @@
   &.component-product-page-content-block--no-border  .component-left-margin-section__content {
     border-top: 0 !important;  
   }    
+  .component-product-page-text-block--heading-only + .component-product-page-text-block--heading-only {
+    border-top: 1px solid $border;
+  }
 }
+
 
 .component-product-page-content-block .component-left-margin-section__content {
   max-width: 100%;
