--- a/assets/components/headers/header/header.scss
+++ b/assets/components/headers/header/header.scss
@@ -6,7 +6,11 @@
   display: flex;
   align-items: center;
   justify-content: stretch;
-  overflow: hidden;
+
+  .component-dialog {
+    align-items: stretch;
+    justify-content: flex-start;
+  }
 
   .svg-guardian-logo {
     display: block;
@@ -56,14 +60,14 @@
 }
 
 .component-header-topnav-logo {
-  z-index: 10;
-  position: relative;
   @include mq($from: tablet) {
     width: gu-span(5);
     background-color: gu-colour(header-dark);
     float: right;
     .component-header--one-row & {
       border-left: 1px solid gu-colour(header-border);
+      z-index: 10;
+      position: relative;    
     }
   }
   @include mq($from: wide) {
@@ -78,8 +82,8 @@
 }
 
 .component-header-bottomnav {
-  display: block;
-  clear: both;
+  display: flex;
+  justify-content: space-between;
   background-color: gu-colour(header-dark);
   border: 1px solid gu-colour(header-border);
   border-bottom: none;
@@ -92,7 +96,7 @@
     position: absolute;
     bottom: 0;
     left: $gu-h-spacing / 2;
-    right: gu-span(1);
+    right: gu-span(5);
   }
 }
 
@@ -101,11 +105,25 @@
   display: inline-flex;
 }
 
+.component-header-bottomnav__veggie {
+  $size: ($gu-v-spacing * 2) + (($gu-v-spacing /1.5) *2) + $gu-v-spacing;
+  display: block;
+  height: $size;
+  width: $size;
+  margin: $gu-v-spacing/-2 $gu-h-spacing;
+  padding: 0;
+  background: gu-colour(news-garnett-highlight);
+  border-radius: 100%;
+  border: 0;
+  cursor: pointer;
+}
+
 .component-header-bottomnav__link {
   @include gu-fontset-nav-desktop;
   color: gu-colour(news-garnett-highlight);
   text-decoration: none;
   display: block;
+  height: $gu-v-spacing * 2;
   padding: ($gu-v-spacing/1.5) ($gu-h-spacing/1.5);
   overflow: hidden;
   position: relative;
