--- a/assets/components/button/button.scss
+++ b/assets/components/button/button.scss
@@ -11,6 +11,7 @@
   border: none;
   border-radius: 600px;
   box-sizing: border-box;
+  background: transparent;
   cursor: pointer;
   transition: .2s;
   justify-content: space-between;
