--- a/assets/components/productPage/productPageHero/productPageHeroSale.scss
+++ b/assets/components/productPage/productPageHero/productPageHeroSale.scss
@@ -1,62 +1,137 @@
 @import '~stylesheets/gu-sass/gu-sass';
 
-.component-product-page-hero {
-  overflow: hidden;
-  .component-left-margin-section__content {
-    position: relative;
-    @include mq($from: tablet) {
-      border-left: 1px solid;
-      .component-heading-block {
-        margin-left: -1px;
-      }    
-    }
-  }
-  .component-heading-block {
-    z-index: 10;
-    position: relative;
-  }
-}
-
-.component-product-page-hero--feature {
-  border-top: 1px solid gu-colour(header-border);
-  background-color: gu-colour(header-dark);
-  .component-left-margin-section__content {
-    border-left-color: gu-colour(header-border);
-  }
-}
-
-.component-product-page-hero--grey {
-  background: gu-colour(garnett-neutral-3);
-  .component-left-margin-section__content {
-    border-left-color: gu-colour(garnett-neutral-4);
-  }
-}
-
-.component-product-page-hero-hanger {
-  background: gu-colour(garnett-neutral-5);
-  .component-left-margin-section__content {
-    @include mq($from: tablet) {
-      border-left: 1px solid gu-colour(garnett-neutral-4);
-      .component-product-page-hero-hanger__content {
-        margin-left: -1px;
-      }
-    }
-    @include multiline-bottom-border;
-  }
-}
-
-.component-product-page-hero-hanger__content {
-  border-top: 1px solid #ffffff;
-  padding: $gu-v-spacing  ($gu-h-spacing / 2);
-  background: gu-colour(garnett-neutral-1);
-  color: #ffffff;
-}
-
 // "Joy of Print Sale" specific styles below! 
 
 .component-product-page-hero--sale {
   background: #FFEDE0;
   .component-left-margin-section__content {
-    border-left-color: gu-colour(garnett-neutral-4);
+    border-left-color: transparent;
+  }
+}
+
+.component-product-page-hero__sale-content {
+  display: flex;
+  align-items: center;
+  padding: $gu-v-spacing*2 0 $gu-v-spacing*4;
+}
+
+.component-product-page-hero__sale-copy {
+  display: none;
+  
+  @include mq($from: phablet) {
+    font-size: 40px;
+    line-height: 1;
+    display: block;
+    max-width: gu-span(5);
+    padding-left: $gu-v-spacing;
+    
+    h2 {
+      font-family: $gu-titlepiece;
+      max-width: gu-span(4);
+      margin: 0 0 $gu-v-spacing/2 0;
+      color: #AD227E;
+    }
+    p {
+      @include gu-fontset-heading;
+    }
+    @include mq($from: tablet) {
+      font-size: 60px;
+    }
+  }
+}
+
+.component-product-page-hero__sale-graphic-outer {
+  position: relative;
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+  max-width: gu-span(8);
+  left: 3rem;
+  padding-right: $gu-v-spacing*2;
+  
+  @include mq($from: tablet) {
+    left: auto;
+    justify-content: flex-end;
+  }
+
+}
+
+.component-product-page-hero__sale-graphic-inner {
+  position: relative;
+  margin-top: $gu-v-spacing*2;
+}
+
+.component-product-page-hero__sale-graphic {
+  position: relative;
+  z-index: 1;
+
+  img {
+    max-height: 280px;
+  }
+
+  @include mq($from: phablet) {
+    img {
+      max-height: 350px;
+    }
+  }
+  @include mq($from: tablet) {
+    img {
+      max-height: 400px;
+    }
+  }
+}
+
+.component-product-page-hero__sale-badge {
+  left: -3rem;
+  top: -0.4rem;
+  position: absolute;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #E05E00;
+  color: gu-colour(garnett-neutral-5);
+  text-align: center;
+  border-radius: 50%;
+  line-height: 1;
+  font-family: $gu-headline;
+  font-size: 14px;
+  font-weight: 700;
+  width: 7.5rem;
+  height: 7.5rem;
+  
+  span {
+    display: block;
+    line-height: 1;
+  }
+  
+  span:nth-child(2) {
+    font-family: $gu-titlepiece;
+    position: relative;
+    top: -0.2rem;
+    font-size: 2.8rem;
+    font-variant-numeric: lining-nums;
+    -moz-font-feature-settings: "lnum";
+    -webkit-font-feature-settings: "lnum";
+    font-feature-settings: "lnum";
+  }
+
+  @include mq($from: phablet) {
+    left: -2.9rem;
+    top: 2.8rem;
+  }
+  
+  @include mq($from: tablet) {
+    left: -4rem;
+    top: 2.4rem;
+    width: 9.375rem;
+    height: 9.375rem;
+    font-size: 16px;
+
+    span:nth-child(2) {
+      font-size: 3.8rem;
+      top: -0.3rem;
+    }
   }
 }
