--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -28,6 +28,8 @@
   }    
   .component-product-page-text-block--heading-only + .component-product-page-text-block--heading-only {
     border-top: 1px solid $border;
+    margin-left:  -($gu-h-spacing / 2);
+    padding-left:  ($gu-h-spacing / 2);
   }
 }
 
