--- a/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
+++ b/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
@@ -1,8 +1,22 @@
 @import '~stylesheets/gu-sass/gu-sass';
 
+.component-product-page-text-block {
+  @include gu-fontset-body;
+  overflow-wrap: break-word;
+  max-width: gu-span(7);
+  @include mq($from: desktop) {
+    max-width: gu-span(8);
+  }
+  > *:not(:last-child) {
+    margin-bottom: ($gu-v-spacing*2)
+  }
+  > .component-product-page-text-block__heading {
+    margin-bottom: ($gu-v-spacing/2);
+  }
+}
+
 .component-product-page-text-block__heading {
   @include gu-fontset-heading;
-  margin-bottom: ($gu-v-spacing/2);
   svg {
     margin-left: $gu-h-spacing/3;
     display: inline-block;
@@ -21,15 +35,6 @@
     padding: 0 ($gu-h-spacing / 4);
     background-color: gu-colour(news-garnett-highlight);
     color: gu-colour(garnett-neutral-1);
-  }
-}
-
-.component-product-page-text-block {
-  @include gu-fontset-body;
-  overflow-wrap: break-word;
-  max-width: gu-span(7);
-  @include mq($from: desktop) {
-    max-width: gu-span(8);
   }
 }
 
