--- a/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
+++ b/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
@@ -8,7 +8,7 @@
     max-width: gu-span(8);
   }
   > *:not(:last-child) {
-    margin-bottom: ($gu-v-spacing*2)
+    margin-bottom: $gu-v-spacing
   }
   > .component-product-page-text-block__heading {
     margin-bottom: ($gu-v-spacing/2);
