--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -1,5 +1,17 @@
 @import '~stylesheets/gu-sass/gu-sass';
 
+@mixin narrow-content {
+  max-width: gu-span(7);
+  @include mq($from: desktop) {
+    max-width: gu-span(8);
+  }
+}
+
+@mixin outset {
+  margin-left: ($gu-h-spacing / 2 * -1);
+  margin-right: ($gu-h-spacing / 2 * -1);
+}
+
 @mixin block-colours($border, $bg: null, $text: null) {
   @if($text){
     color: $text;
@@ -89,13 +101,20 @@
 }
 
 .component-product-page-content-block-outset {
-  margin-left: ($gu-h-spacing / 2 * -1);
-  margin-right: ($gu-h-spacing / 2 * -1);
+  @include outset;
 }
 
 .component-product-page-content-block-divider {
+  @include outset;
   height: 20px;
   margin-bottom: ($gu-v-spacing*.33);
+}
+
+.component-product-page-content-block-divider--small {
+  @include narrow-content;
+  height: 1px;
+  overflow: hidden;
+  position: relative;
 }
 
 .component-product-page-content-block-divider__line {
@@ -107,10 +126,8 @@
 }
 
 .component-product-page-content-block__narrowContent {
-  max-width: gu-span(7);
-  @include mq($from: desktop) {
-    max-width: gu-span(8);
-  }
+  @include narrow-content;
+  
 }
 
 // ----- Vertical rhythm ------ //
