--- a/assets/components/headers/mobileHeader/mobileHeader.scss
+++ b/assets/components/headers/mobileHeader/mobileHeader.scss
@@ -3,6 +3,7 @@
 .component-mobile-header {
   background: gu-colour(header-dark);
   min-height: 100%;
+  max-width: 95vw;
   position: relative;
 }
 
