animaed header in

--- a/assets/components/button/button.scss
+++ b/assets/components/button/button.scss
@@ -6,7 +6,7 @@
   align-items: center;
   text-decoration: none;
   font-weight: bold;
-  height: $gu-v-spacing*3.5;
+  height: $gu-input-height;
   padding: ($gu-v-spacing/2) $gu-h-spacing;
   border: none;
   border-radius: 600px;
