--- a/assets/stylesheets/gu-sass/layout.scss
+++ b/assets/stylesheets/gu-sass/layout.scss
@@ -8,6 +8,7 @@
 $gu-h-spacing: 20px;
 $gu-v-spacing: 12px;
 $gu-col-width: 60px;
+$gu-input-height: $gu-v-spacing * 3.5;
 
 
 // Size of cta buttons
