--- a/assets/components/dialog/dialog.scss
+++ b/assets/components/dialog/dialog.scss
@@ -5,22 +5,27 @@
   height: 0;
   width: 0;
   overflow: hidden;
+  &::backdrop {
+    background: rgba(0,0,0,0);
+  }  
 }
 
 .component-dialog--open {
-  display: flex;
   visibility: visible;
   position: fixed;
-  height: auto;
-  width: auto;
+  height: 100%;
+  width: 100%;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   z-index: 100;
-  justify-content: center;
-  align-items: center;
   contain: strict;
+  &.component-dialog--styled {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+  }
 }
 
 .component-dialog__contents {
@@ -29,11 +34,15 @@
 }
 
 .component-dialog__backdrop {
-  background: rgba(0, 0, 0, 0.6);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   z-index: 9;
+  height: 100%;
+  width: 100%;
+  .component-dialog--styled & {
+    background: rgba(0, 0, 0, 0.6);
+  }
 }
