--- a/assets/components/promotionSummary/promotionSummary.scss
+++ b/assets/components/promotionSummary/promotionSummary.scss
@@ -1,4 +1,5 @@
 .component-promotion-summary {
+  @include gu-fontset-body-sans;
   padding-top: $gu-v-spacing;
   padding-bottom: $gu-v-spacing / 2;
   padding-left: $gu-h-spacing / 2;
