--- a/app/views/test.scala.html
+++ b/app/views/test.scala.html
@@ -2313,7 +2313,7 @@
           <div class="component-progress-message">
             <div class="component-progress-message__dialog">
 
-              <div class="component-progress-message__message">The page is loading; please be patient</div>
+              <div class="component-progress-message__message">Loading the page</div>
               <div class="component-animated-dots">
                 <div class="component-animated-dots__bounce1"></div>
                 <div class="component-animated-dots__bounce2"></div>
